--- a/instagram_clone01/GoogleService-Info.plist
+++ b/instagram_clone01/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>142968481635-erodb2r2q071hs3m9adjjer31a6hjsm5.apps.googleusercontent.com</string>
+	<string>236262651670-7h4v9hobmr9m1v47os8r4m6ch7q8dovd.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.142968481635-erodb2r2q071hs3m9adjjer31a6hjsm5</string>
+	<string>com.googleusercontent.apps.236262651670-7h4v9hobmr9m1v47os8r4m6ch7q8dovd</string>
 	<key>API_KEY</key>
-	<string>AIzaSyB32CE_ivysXu2_uSk9vDX3ja2muDQEt4w</string>
+	<string>AIzaSyBNDe8N8DVJ8l7EvMKH8vvzRDdUfn8mEjY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>142968481635</string>
+	<string>236262651670</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.kimjunhyeok.loginproject</string>
+	<string>com.kimjunhyeok.instagram-clone01</string>
 	<key>PROJECT_ID</key>
-	<string>loginproject-5d9f0</string>
+	<string>instagram-clone-52a1c</string>
 	<key>STORAGE_BUCKET</key>
-	<string>loginproject-5d9f0.appspot.com</string>
+	<string>instagram-clone-52a1c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:142968481635:ios:00070573405d636f</string>
+	<string>1:236262651670:ios:d8f75d7d0a2a9e9d</string>
 	<key>DATABASE_URL</key>
-	<string>https://loginproject-5d9f0.firebaseio.com</string>
+	<string>https://instagram-clone-52a1c.firebaseio.com</string>
 </dict>
 </plist>
